--- a/sass/eachSample.scss
+++ b/sass/eachSample.scss
@@ -5,3 +5,16 @@ $colors: "red", "yellow", "blue";
     background-color: $color;
   }
 }
+
+
+
+@mixin important-text {
+  color: red;
+  font-size: 25px;
+  font-weight: bold;
+  border: 1px solid blue;
+}
+
+
+
+
